apps/base/podinfo/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: podinfo
spec:
  hosts:
    - podinfo.local
  gateways:
    - istio-ingress/http-ingress-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: "podinfo.test.svc.cluster.local"
        port:
          number: 9898
